# cpp-hello

./: .editorconfig  .gitattributes  .gitignore  001-hello.cpp  01-runit.cpp  CMakeLists.txt  Makefile  Makefile.old  README.md  cpp-compile-link-and-run.py  hello-world.cpp  hello.cpp  hello1.cpp  hello2.cpp  hello2.h  hello3.cpp  leaky.cpp  perl-test-compile-link-run.pl  show-compiler-language-standard.cpp  test-joe.cpp  test-joe.h  test.cpp
include/: hello2.h
src/: compiler-language-info.cpp  hello1.cpp  hello2.cpp  test.cpp
src/moderncpp/: lrncpp00p01.cpp
superseded/: Makefile.old.old  cpp-compile-link-and-run.pl
